--- a/vagrantfile
+++ b/vagrantfile
@@ -9,11 +9,16 @@ Vagrant.configure("2") do |config|
     end
     # Define two VMs with static private IP addresses.
     boxes = [
-      { :name => "backup_server",
-        :ip => "192.168.50.10",
+      { :name => "backup",
+        :ip => "192.168.11.160",
+        :disks => {
+        :sata1 => {
+            :dfile => home + '/VirtualBox VMs/sata1.vdi',
+            :size => 2048,
+            :port => 1
       },
       { :name => "client",
-        :ip => "192.168.50.15",
+        :ip => "192.168.11.150",
       }
     ]
     # Provision each of the VMs.
