--- a/vagrantfile
+++ b/vagrantfile
@@ -20,6 +20,12 @@ Vagrant.configure("2") do |config|
       },
       { :name => "client",
         :ip => "192.168.11.150",
+        :disks => {
+            :sata1 => {
+            :dfile => home + '/VirtualBox VMs/sata1.vdi',
+            :size => 2048,
+            :port => 1
+        },
       }
     ]
     # Provision each of the VMs.
