--- a/vagrantfile
+++ b/vagrantfile
@@ -1,5 +1,6 @@
 Vagrant.configure("2") do |config|
     # Base VM OS configuration.
+    home = ENV['HOME']
     config.vm.box = "centos/7"
     config.vm.box_version = "2004.01"
   
