--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -1,2 +1,51 @@
 ---
 # tasks file for backup
+  - name: install epel-release
+    yum:
+      state: present
+      name:
+        - epel-release
+
+  - name: install borg_backup
+    yum:
+      state: present
+      name:
+        - borgbackup
+
+  - name: Create user borg
+    ansible.builtin.user:
+      name: borg
+      home: /home/borg
+
+  - name: Create directory /var/backup
+    ansible.builtin.file:
+      path: /var/backup
+      state: directory
+      mode: '0755'
+      owner: borg
+      group: borg
+
+  - name: Mount /var/backup
+    mount:
+      path: /dev/sda1
+      src: /var/backup
+      opts: bind
+      state: mounted
+      fstype: none
+
+  - name: Create directory .ssh
+    ansible.builtin.file:
+      path: /home/borg/.ssh
+      state: directory
+      mode: '0700'
+      owner: borg
+      group: borg
+
+  - name: Create directory .authorized_keys
+    ansible.builtin.file:
+      path: /home/borg/.ssh/.authorized_keys
+      state: directory
+      mode: '0600'
+      owner: borg
+      group: borg
+
