--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -1,2 +1,14 @@
 ---
 # tasks file for client
+
+  - name: install epel-release
+    yum:
+      state: present
+      name:
+        - epel-release
+
+  - name: install borg_backup
+    yum:
+      state: present
+      name:
+        - borgbackup
