--- a/vagrantfile
+++ b/vagrantfile
@@ -2,10 +2,13 @@
 # vim: set ft=ruby :
 home = ENV['HOME']
 ENV["LC_ALL"] = "en_US.UTF-8"
+config.vm.box = "centos/7"
+box_name = config.vm.box
+
 
 MACHINES = {
   :backup => {
-        :config.vm.box = "centos/7",
+        :box_name => "centos/7",
         :ip_addr => '192.168.11.160',
     :disks => {
         :sata1 => {
@@ -16,7 +19,7 @@ MACHINES = {
     }
   },
   :client => {
-        :config.vm.box = "centos/7",
+        :box_name => "centos/7",
         :ip_addr => '192.168.11.150',
         :disks => {
             :sata2 => {
