--- a/vagrantfile
+++ b/vagrantfile
@@ -1,67 +1,47 @@
-# -*- mode: ruby -*-
-# vim: set ft=ruby :
-home = ENV['HOME']
-ENV["LC_ALL"] = "en_US.UTF-8"
-config.vm.box = "centos/7"
-box_name = config.vm.box
-
-
-MACHINES = {
-  :backup => {
-        :box_name => "centos/7",
-        :ip_addr => '192.168.11.160',
-    :disks => {
-        :sata1 => {
-            :dfile => home + '/VirtualBox VMs/sata1.vdi',
-            :size => 2048,
-            :port => 1
-        }
-    }
-  },
-  :client => {
-        :box_name => "centos/7",
-        :ip_addr => '192.168.11.150',
-        :disks => {
-            :sata2 => {
-                :dfile => home + '/VirtualBox VMs/sata2.vdi',
-                :size => 2048,
-                :port => 2
-            }
-        }
-  },
-}
-
 Vagrant.configure("2") do |config|
+    # Base VM OS configuration.
+    home = ENV['HOME']
+    config.vm.box = "centos/7"
+    config.vm.box_version = "2004.01"
+  
+    config.vm.provider :virtualbox do |v|
+      v.memory = 512
+      v.cpus = 1
+    end
+    # Define two VMs with static private IP addresses.
+    boxes = [
+      { :name => "backup",
+        :ip => "192.168.11.160",
+        # :disks => {
+        #         :sata1 => {
+        #         :dfile => home + '/VirtualBox VMs/sata1.vdi',
+        #         :size => 1024,
+        #         :port => 1
+        #         },
+        # },
+      },
+      { :name => "client",
+        :ip => "192.168.11.150",
+      }
+    ]
 
-    config.vm.box_version = "1804.02"
-    MACHINES.each do |boxname, boxconfig|
-  
-        config.vm.define boxname do |box|
-  
-            box.vm.box = boxconfig[:box_name]
-            box.vm.host_name = boxname.to_s
-  
-            #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
-  
-            box.vm.network "private_network", ip: boxconfig[:ip_addr]
-  
-            box.vm.provider :virtualbox do |vb|
-                    vb.customize ["modifyvm", :id, "--memory", "256"]
-                    needsController = false
-            boxconfig[:disks].each do |dname, dconf|
-                unless File.exist?(dconf[:dfile])
-                  vb.customize ['createhd', '--filename', dconf[:dfile], '--variant', 'Fixed', '--size', dconf[:size]]
-                                  needsController =  true
-                            end
-  
-            end
-                    if needsController == true
-                       vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
-                       boxconfig[:disks].each do |dname, dconf|
-                           vb.customize ['storageattach', :id,  '--storagectl', 'SATA', '--port', dconf[:port], '--device', 0, '--type', 'hdd', '--medium', dconf[:dfile]]
-                       end
-                    end
-            end
+    config.vm.provider "virtualbox" do |vb|
+
+          second_disk = "/tmp/build6box-disk2.vmdk"
+          vb.customize ['createhd', '--filename', second_disk, '--size', 2 * 1024]
+          vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', second_disk]
         end
+      
+
+    # Provision each of the VMs.
+    boxes.each do |opts|
+      config.vm.define opts[:name] do |config|
+        config.vm.hostname = opts[:name]
+        config.vm.network "private_network", ip: opts[:ip]
+    #       config.vm.provision "ansible" do |ansible|
+    #       ansible.playbook = "./rum.yml"
+    #       ansible.limit = "all"
+    #   end
+    end
     end
   end
