--- a/vagrantfile
+++ b/vagrantfile
@@ -27,7 +27,7 @@ Vagrant.configure("2") do |config|
 
     config.vm.provider "virtualbox" do |vb|
 
-          second_disk = "/tmp/build6box-disk2.vmdk"
+          second_disk = "/home/bendin/build6box-disk2.vmdk"
           vb.customize ['createhd', '--filename', second_disk, '--size', 2 * 1024]
           vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', second_disk]
         end
