--- a/vagrantfile
+++ b/vagrantfile
@@ -3,6 +3,7 @@ Vagrant.configure("2") do |config|
     home = ENV['HOME']
     config.vm.box = "centos/7"
     config.vm.box_version = "2004.01"
+    config.vm.disk :disk, size: "2GB", name: "backup_storage"
   
     config.vm.provider :virtualbox do |v|
       v.memory = 512
@@ -25,12 +26,6 @@ Vagrant.configure("2") do |config|
       }
     ]
 
-    config.vm.provider "virtualbox" do |vb|
-
-          second_disk = "/home/bendin/build6box-disk2.vmdk"
-          vb.customize ['createhd', '--filename', second_disk, '--size', 2 * 1024]
-          vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', second_disk]
-        end
       
 
     # Provision each of the VMs.
