--- a/vagrantfile
+++ b/vagrantfile
@@ -1,42 +1,70 @@
+# -*- mode: ruby -*-
+# vim: set ft=ruby :
+home = ENV['HOME']
+ENV["LC_ALL"] = "en_US.UTF-8"
+
+MACHINES = {
+  :backup => {
+        :box_name => "centos/7",
+        :ip_addr => '192.168.11.101',
+    :disks => {
+        :sata1 => {
+            :dfile => home + '/VirtualBox VMs/sata1.vdi',
+            :size => 10240,
+            :port => 1
+        }
+    }
+  },
+  :client => {
+        :box_name => "centos/7",
+        :ip_addr => '192.168.11.101',
+    :disks => {
+        :sata1 => {
+            :dfile => home + '/VirtualBox VMs/sata1.vdi',
+            :size => 10240,
+            :port => 1
+        }
+    }
+  },
+}
+
 Vagrant.configure("2") do |config|
-    # Base VM OS configuration.
-    home = ENV['HOME']
-    config.vm.box = "centos/7"
-    config.vm.box_version = "2004.01"
-    config.vm.disk :disk, size: "2GB", name: "backup_storage"
+
+    MACHINES.each do |boxname, boxconfig|
   
-    config.vm.provider :virtualbox do |v|
-      v.memory = 512
-      v.cpus = 1
-    end
-    # Define two VMs with static private IP addresses.
-    boxes = [
-      { :name => "backup",
-        :ip => "192.168.11.160",
-        # :disks => {
-        #         :sata1 => {
-        #         :dfile => home + '/VirtualBox VMs/sata1.vdi',
-        #         :size => 1024,
-        #         :port => 1
-        #         },
-        # },
-      },
-      { :name => "client",
-        :ip => "192.168.11.150",
-      }
-    ]
-
-      
-
-    # Provision each of the VMs.
-    boxes.each do |opts|
-      config.vm.define opts[:name] do |config|
-        config.vm.hostname = opts[:name]
-        config.vm.network "private_network", ip: opts[:ip]
-    #       config.vm.provision "ansible" do |ansible|
-    #       ansible.playbook = "./rum.yml"
-    #       ansible.limit = "all"
-    #   end
-    end
+        config.vm.define boxname do |box|
+  
+            box.vm.box = boxconfig[:box_name]
+            box.vm.host_name = boxname.to_s
+  
+            #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
+  
+            box.vm.network "private_network", ip: boxconfig[:ip_addr]
+  
+            box.vm.provider :virtualbox do |vb|
+                    vb.customize ["modifyvm", :id, "--memory", "256"]
+                    needsController = false
+            boxconfig[:disks].each do |dname, dconf|
+                unless File.exist?(dconf[:dfile])
+                  vb.customize ['createhd', '--filename', dconf[:dfile], '--variant', 'Fixed', '--size', dconf[:size]]
+                                  needsController =  true
+                            end
+  
+            end
+                    if needsController == true
+                       vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
+                       boxconfig[:disks].each do |dname, dconf|
+                           vb.customize ['storageattach', :id,  '--storagectl', 'SATA', '--port', dconf[:port], '--device', 0, '--type', 'hdd', '--medium', dconf[:dfile]]
+                       end
+                    end
+            end
+  
+        box.vm.provision "shell", inline: <<-SHELL
+            mkdir -p ~root/.ssh
+            cp ~vagrant/.ssh/auth* ~root/.ssh
+            yum install -y mdadm smartmontools hdparm gdisk
+          SHELL
+  
+        end
     end
   end
