--- a/vagrantfile
+++ b/vagrantfile
@@ -10,7 +10,7 @@ MACHINES = {
     :disks => {
         :sata1 => {
             :dfile => home + '/VirtualBox VMs/sata1.vdi',
-            :size => 10240,
+            :size => 2048,
             :port => 1
         }
     }
@@ -18,6 +18,13 @@ MACHINES = {
   :client => {
         :box_name => "centos/7",
         :ip_addr => '192.168.11.150',
+    :disks => {
+        :sata2 => {
+            :dfile => home + '/VirtualBox VMs/sata2.vdi',
+            :size => 128,
+            :port => 2
+        }
+    }
   },
 }
 
