--- a/vagrantfile
+++ b/vagrantfile
@@ -59,5 +59,13 @@ Vagrant.configure("2") do |config|
                     end
             end
         end
+        box.each do |opts|
+            config.vm.define opts[:name] do |config|
+                config.vm.provision "ansible" do |ansible|
+                ansible.playbook = "./rum.yml"
+                ansible.limit = "all"
+              
+            end
+          end
     end
   end
