--- a/vagrantfile
+++ b/vagrantfile
@@ -58,16 +58,10 @@ Vagrant.configure("2") do |config|
                        end
                     end
             end
-        end
-        config.vm.define boxname do |opts|
-            config.vm.define opts[:name] do |config|
-                config.vm.provision "ansible" do |ansible|
-                ansible.playbook = "./rum.yml"
-                ansible.limit = "all"
-              
-            end
-          end
-    
+            config.vm.network "private_network", ip: opts[:ip]
+            config.vm.provision "ansible" do |ansible|
+            ansible.playbook = "./rum.yml"
+            ansible.limit = "all"
         end
     end
-end
+  end
