--- a/vagrantfile
+++ b/vagrantfile
@@ -62,6 +62,9 @@ Vagrant.configure("2") do |config|
             config.vm.provision "ansible" do |ansible|
             ansible.playbook = "./rum.yml"
             ansible.limit = "all"
+        
+        
+            end
         end
     end
   end
