--- a/vagrantfile
+++ b/vagrantfile
@@ -59,7 +59,7 @@ Vagrant.configure("2") do |config|
                     end
             end
             config.vm.provision "ansible" do |ansible|
-            ansible.playbook = "./rum.yml"
+            ansible.playbook = "./run.yml"
             ansible.limit = "all"
         
         
