--- a/vagrantfile
+++ b/vagrantfile
@@ -58,12 +58,12 @@ Vagrant.configure("2") do |config|
                        end
                     end
             end
-            config.vm.provision "ansible" do |ansible|
-            ansible.playbook = "./run.yml"
-            ansible.limit = "all"
+            # config.vm.provision "ansible" do |ansible|
+            # ansible.playbook = "./run.yml"
+            # ansible.limit = "all"
         
         
-            end
+            # end
         end
     end
   end
