--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -27,9 +27,9 @@
 
   - name: Mount /var/backup
     mount:
-      path: /var/backup
+      path: "/var/backup"
       src: /dev/sdb
-      opts: bind
+      opts: bind, nofail
       state: mounted
       fstype: none
 
