--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -27,11 +27,12 @@
 
   - name: Mount /var/backup
     mount:
-      path: "/var"
+      path: "/var/backup"
       src: /dev/sdb
       opts: bind
       state: mounted
       fstype: none
+    state: present
 
   - name: Creates directory .ssh
     file:
