--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -25,11 +25,19 @@
       group: borg
 
 
+  # - name: Mount /var/backup
+  #   mount:
+  #     path: "/var/backup"
+  #     src: /dev/sdb
+  #     state: mounted
+  #     fstype: none
   - name: Mount /var/backup
-    mount:
-      path: "/var/backup"
+    ansible.posix.mount:
+      path: /var/backup
       src: /dev/sdb
+      opts: bind
       state: mounted
+      fstype: none
 
   - name: Creates directory .ssh
     file:
