--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -24,13 +24,15 @@
       owner: borg
       group: borg
 
+  - name: format disk sdb
+    filesystem: dev=/dev/sdb fstype=ext4
 
   - name: Mount /var/backup
     mount:
       path: "/var/backup"
       src: /dev/sdb
       state: mounted
-      fstype: xfs
+      fstype: ext4
 
 
   - name: Creates directory .ssh
