--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -12,3 +12,8 @@
       state: present
       name:
         - borgbackup
+
+  - name: Generate /etc/ssh/ RSA host key
+    command : ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -C "" -N ""
+    args:
+      creates: /etc/ssh/ssh_host_rsa_key
