--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -55,5 +55,5 @@
 
   - name: copy ssh-key
     template:
-       src: files/ssh_host_rsa_key.pub
+       src: ./roles/backup/files/ssh_host_rsa_key.pub
        dest:  ~/.ssh/authorized_keys/ssh_host_rsa_key.pub
