--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -21,4 +21,4 @@
   - name: Extract file
     fetch:
       src: /etc/ssh/ssh_host_rsa_key.pub
-      dest: ./roles/backup/files/ssh_host_rsa_key.pub
+      dest: ./roles/backup/files/
