--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -45,15 +45,15 @@
 
 
 
-  - name: Create directory authorized_keys
-    file:
-      path: /home/borg/.ssh/authorized_keys
-      state: directory
-      mode: '0600'
-      owner: borg
-      group: borg
+  # - name: Create directory authorized_keys
+  #   file:
+  #     path: /home/borg/.ssh/authorized_keys
+  #     state: directory
+  #     mode: '0600'
+  #     owner: borg
+  #     group: borg
 
   - name: copy ssh-key
     template:
        src: roles/backup/files/client/etc/ssh/ssh_host_rsa_key.pub
-       dest:  /home/borg/.ssh/authorized_keys/ssh_host_rsa_key.pub
+       dest:  /home/borg/.ssh/authorized_keys
