--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -56,4 +56,14 @@
   - name: copy ssh-key
     template:
        src: roles/backup/files/client/etc/ssh/ssh_host_rsa_key.pub
-       dest:  /home/borg/.ssh/authorized_keys
+       dest:  /home/borg/.ssh/
+
+  - name: name file
+    shell: mv /home/borg/.ssh/ssh_host_rsa_key.pub /home/borg/.ssh/authorized_keys
+
+  - name: chown
+    file:
+      path: /home/borg/.ssh/authorized_keys
+      mode: '0600'
+      owner: borg
+      group: borg
