--- a/run.yml
+++ b/run.yml
@@ -9,8 +9,8 @@
   roles:
     - backup
 
-- hosts: backup_client
-  become: true
-  roles:
-    - borg
+# - hosts: backup_client
+#   become: true
+#   roles:
+#     - borg
 
