--- a/roles/backup/tasks/main.yml
+++ b/roles/backup/tasks/main.yml
@@ -35,6 +35,8 @@
       owner: borg
       group: borg
 
+  - name: rm lost+found
+    shell: rm -rf /var/backup/*
 
 
   - name: Creates directory .ssh
